--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,14 +31,34 @@ h4 {
 a {
     text-decoration: none;
 }
+input {
+    color: #59889b;
+}
+
+::-webkit-input-placeholder {
+    color: #59889b;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #59889b;
+  }
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: #59889b;
+  }
+  :-ms-input-placeholder { /* IE 10+ */
+    color: #59889b;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    color: #59889b;
+  }
 
 /*==========================================
                 HEADER FOOTER
 ============================================*/
 
 header {
-    _border-bottom: 1px solid #e2e2e2;
-    box-shadow: 0 2px 21px 0 rgba(0, 72, 101, 0.07);
+    border-bottom: 1px solid #e2e2e2;
+    _box-shadow: 0 2px 21px 0 rgba(0, 72, 101, 0.07);
 }
 
 header, footer {
@@ -107,4 +127,52 @@ footer {
 .item-slider .caption p {
     font-size: 70px;
     margin-top: 0; 
+}
+
+/*==========================================
+                  SUBSCRIBE
+============================================*/
+.subscribe_panel {
+    text-align: center;
+    width: 350px;
+    margin: 0 auto;
+}
+
+.subscribe_panel h3 {
+    font-size: 35px;
+    font-weight: 300;
+    margin-bottom: 0;
+}
+
+.subscribe_panel input {
+    border-radius: 24px;
+    border: 1px solid #9bc2d1;
+    text-align: center;
+    font-size: 22px;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.subscribe_panel input:focus {
+    outline-width: 0; 
+}
+
+.subscribe_panel small {
+    font-size: 10px;
+    line-height: 0;
+}
+
+.subscribe_panel .error {
+    display: none;
+    color: #f44336;
+}
+
+.subscribe_panel .success {
+    display: none;
+    color: #4caf50;
+}
+
+.subscribe_panel .error.show,
+.subscribe_panel .success.show {
+    display: block;
 }
