--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,3 +176,81 @@ footer {
 .subscribe_panel .success.show {
     display: block;
 }
+
+/*==========================================
+                    BLOCKS
+============================================*/
+
+.home_blocks {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+.home_blocks .item {
+    flex-grow: 1;
+    position: relative;
+    height: 380px;
+    overflow: hidden;
+}
+
+.home_blocks .item.lg {
+    width: 50%;
+}
+
+.home_blocks .item.md {
+    width: 30%;
+}
+
+.home_blocks .item.sm {
+    width: 20%;
+}
+
+.home_blocks .item .image {
+    height: 380px;
+    width: 100%;
+    background-size: cover !important;
+    background-position: center center !important;
+}
+
+.home_blocks .item .title {
+    background-color: #000;
+    padding: 10px;
+    transition: all 500ms ease-in-out;
+}
+
+.home_blocks .item:hover .title {
+    transform: translate(0px, -39px);
+    transition: all 500ms ease-in-out;
+}
+
+.home_blocks .item .title a {
+    color: #fff;
+}
+
+.home_blocks .item.lg {
+    animation-delay: 200ms !important;
+}
+
+.home_blocks .item.md {
+    animation-delay: 500ms !important;
+}
+
+.home_blocks .item.sm {
+    animation-delay: 800ms !important;
+}
+
+.home_blocks .item .veil {
+    background: #000;
+    opacity: 0.7;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    transition: all 500ms ease-in-out;
+}
+
+.home_blocks .item:hover .veil {
+    opacity: 0;
+}
