--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,3 +284,80 @@ footer {
     font-family: 'Fjalla One', sans-serif;
     font-size: 18px;
 }
+
+/*==========================================
+                    FADE
+============================================*/
+
+.fade-appear {
+    opacity: 0.01;
+}
+
+.fade-appear.fade-appear-active {
+    opacity: 1;
+    transition: opacity .5s ease-in;
+}
+
+.fade-enter {
+    opacity: 0.01;
+}
+
+.fade-enter.fade-enter-active {
+    opacity: 1;
+    transition: opacity .5s ease-in;
+}
+
+.fade-leave {
+    opacity: 0.01;
+}
+
+.fade-leave.fade-leave-active {
+    opacity: 1;
+    transition: opacity .5s ease-in;
+}
+
+/*==========================================
+                    TEAMS
+============================================*/
+
+.teams_component {
+    min-height: 800px;
+}
+
+.teams_input {
+    text-align: center;
+    padding: 20px 0;
+    background-color: #e6e6e6;
+}
+
+.teams_input input {
+    font-family: 'Roboto', sans-serif;
+    border-radius: 30px;
+    _border: 1px solid lightgray;
+    border: 1px solid #9bc2d1;
+    _color: black;
+    font-size: 20px;
+    padding: 10px;
+    font-weight: 300;
+    text-align: center;
+}
+
+.teams_input input:focus {
+    outline: none;
+}
+
+.teams_container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.teams_container .team_item {
+    width: 25%;
+    padding: 30px;
+    box-sizing: border-box;
+}
+
+.teams_container .team_item img {
+    width: 25%;
+}
