--- a/public/css/style.css
+++ b/public/css/style.css
@@ -322,6 +322,7 @@ footer {
 
 .teams_component {
     min-height: 800px;
+    background-color: #fff; 
 }
 
 .teams_input {
@@ -360,4 +361,67 @@ footer {
 
 .teams_container .team_item img {
     width: 25%;
+}
+
+/*==========================================
+                    TEAM
+============================================*/
+
+.team_data_wrapper {
+    display: flex;
+}
+
+.team_data_wrapper .left {
+    box-sizing: border-box;
+    padding: 10px 20px;
+}
+
+.team_data_wrapper .right {
+    flex-grow: 1;
+    box-sizing: border-box;
+    border-left: 1px solid #b9b9b9;
+    padding: 0 20px;
+}
+
+.team_data_wrapper .left img {
+    width: 150px;
+}
+
+.team_data_wrapper h1 {
+    color: #6d6d6d;
+}
+
+.team_data_wrapper .squad {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.team_data_wrapper .squad .item {
+    position: relative;
+    width: 25%;
+    overflow: hidden;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.team_data_wrapper .squad .item h4 {
+    text-align: center;
+    color: #006bb6;
+}
+
+.team_data_wrapper .squad .item img {
+    width: 40%;
+    display: block;
+    margin: 0 auto;
+}
+
+.team_data_wrapper .squad .item .node {
+    text-align: center;
+    font-size: 14px;
+    padding: 4px 0;
+}
+
+.team_data_wrapper .squad .item .node span {
+    font-weight: 600;
 }
